Cisco syslog パーサーの強化と設定の更新
- Ciscoログの複数形式に対応（年あり/なし、タイムゾーンあり/なし、ミリ秒あり/なし）
- 構造化データ [syslog@9] の柔軟な処理（s_id パラメータ対応）
- タイムゾーン自動判定（JST/UTC）とJST出力
- cisco.log ファイル出力機能追加
- seq1/seq2 フィールド整理（seq2 → seq に統一、不要フィールド削除）
- README.md に Cisco 設定例を追加（year, sequence-num-session 対応）

--- a/syslogng-openobserve/Makefile
+++ b/syslogng-openobserve/Makefile
@@ -11,6 +11,7 @@ help:
 	@echo "    make clean         (*) データ、ログの削除"
 	@echo "    make update-image  (-) イメージを更新して再起動 (ログは保持)"
 	@echo "    make conf_check    (-) config ファイルのチェック"
+	@echo "    make show_version  (-) コンテナのバージョン表示"
 	@echo "    make flood_syslog  (*) ダミーの syslog メッセージを送信"
 	@echo "    make syslog_s      (*) Docker 内の syslog-ng へ直接 syslog を送信"
 	@echo ""
@@ -42,7 +43,7 @@ clean: NEED_ROOT down
 	@install -d -m 777 -o 0    -g 0    ./openobserve/data/
 
 # syslog-ng の設定ファイルをチェックする
-conf_check:
+conf_check: NO_ROOT
 	@echo "=================================="
 	@echo "==== syslog-ng config check ======"
 	@echo "=================================="
@@ -52,6 +53,22 @@ conf_check:
 	  /usr/sbin/syslog-ng -s -f /config/syslog-ng.conf |\
 	  grep -A 1000 ls.io-init || true
 	@echo ""
+
+show_version: NO_ROOT
+	@echo "=================================="
+	@echo "==== syslog-ng version ==========="
+	@echo "=================================="
+	@docker run -it --rm --name syslog-ng-version \
+	  lscr.io/linuxserver/syslog-ng \
+	  /usr/sbin/syslog-ng --version |\
+	  grep -A 1000 ls.io-init || true
+	@echo "=================================="
+	@echo "==== OpenObserve version ========="
+	@echo "=================================="
+	@docker run -it --rm --name openobserve_version \
+	  public.ecr.aws/zinclabs/openobserve:latest \
+	  /openobserve --version || true
+
 
 # syslog-ng に直接 syslog メッセージを送信する
 syslog_s: NEED_ROOT flo_syslog flood_syslog
