--- a/syslogng-openobserve/docker-compose.yml
+++ b/syslogng-openobserve/docker-compose.yml
@@ -1,11 +1,16 @@
+# ロギングの共通設定 (アンカー)
+x-logging-def: &logging-def
+  driver: "local"
+  options:
+    max-size: "100m"
+    max-file: "10"
+
 services:
   # https://openobserve.ai/docs/guide/quickstart/#self-hosted-installation
   OpenObserve:
     # simd は AVX512 に対応していないと (Xeon とか) 動作しない
     image: public.ecr.aws/zinclabs/openobserve:latest
     container_name: OpenObserve
-    logging:
-      driver: "local"
     ports:
       - 5080:5080
     volumes:
@@ -15,22 +20,32 @@ services:
     env_file:
       - ./openobserve/.env
     restart: unless-stopped
+    logging: *logging-def
 
   # https://docs.linuxserver.io/images/docker-syslog-ng/
   syslog-ng:
     image: lscr.io/linuxserver/syslog-ng:latest
     container_name: syslog-ng
-    logging:
-      driver: "local"
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Asia/Tokyo
     volumes:
       - ./syslog-ng/conf/:/config/
+      - ./syslog-ng/buffer/:/buffer/
     ports:
-      - 514:6601/tcp   # syslog TCP
-      - 514:5514/udp   # syslog UDP
-      # - 6514:6514/tcp  # syslog TLS きちんと設定していないので使えない
+      - 514:514/tcp    #  514/tcp RFC 5424 形式 改行区切り
+      - 514:514/udp    #  514/udp RFC 5424 形式
+      - 2514:2514/tcp  # 2514/tcp RFC 5424 形式 octet-counted 用
+      - 3514:3514/tcp  # 3514/tcp Cisco 用
+      - 3514:3514/udp  # 3514/udp Cisco 用
+      - 4514:4514/tcp  # 4514/tcp RFC 3164 形式
+      - 4514:4514/udp  # 4514/udp RFC 3164 形式
+      - 5514:5514/tcp  # 5514/tcp Fortigate 用
+      - 5514:5514/udp  # 5514/udp Fortigate 用
+      - 6514:6514/tcp  # 6514/tcp JSON 構造化ログを受け付ける
+
+      # - 6514:6514/tcp  # syslog TLS はきちんと設定していないので使えない
     restart: unless-stopped
+    logging: *logging-def
 
