--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -336,8 +336,6 @@ destination d_openobserve_json {
   );
 };
 
-
-
 #==================================
 # 5. ログ処理のパイプライン定義
 #==================================
@@ -352,6 +350,26 @@ log {
 };
 
 # ---------------------------------------------------
+# YAMAHA RTX 用
+# ---------------------------------------------------
+filter f_old_yamaha {
+  host(^192.168.99.99$) or
+  host(^192.168.99.222$)   # RTX のアドレス
+};
+
+log {
+  source(s_rfc5424);
+  filter(f_old_yamaha);
+  # PROGRAMとMESSAGEに分割されるので結合する
+  rewrite {
+    set("${PROGRAM} ${MESSAGE}", value("MESSAGE"));
+    unset(value("PROGRAM"));
+  };
+  destination(d_openobserve);
+  flags(final);
+};
+
+# ---------------------------------------------------
 # Fortigate 用
 # ---------------------------------------------------
 log {
@@ -359,7 +377,7 @@ log {
   filter(f_fortigate);
   parser(p_fortigate);
   destination(d_openobserve);
-  flags(final); # ここで処理完了とし、以降のlogブロックに進まない
+  flags(final);               # ここで処理完了
 };
 
 # ---------------------------------------------------
@@ -367,11 +385,11 @@ log {
 # ---------------------------------------------------
 log {
   source(s_cisco);
-  destination(d_cisco_raw);  # デバッグ用: RAW メッセージ出力（パース前）
-  parser(p_cisco);           # 構造化データ削除 + タイムスタンプ抽出 + cisco-parser
-  destination(d_cisco_file); # ファイル出力（パース後、正しい時刻）
+  destination(d_cisco_raw);   # デバッグ用: RAW メッセージ出力（パース前）
+  parser(p_cisco);            # 構造化データ削除 + タイムスタンプ抽出 + cisco-parser
+  destination(d_cisco_file);  # ファイル出力（パース後、正しい時刻）
   destination(d_openobserve); # OpenObserve へ送信
-  flags(final);             # ここで処理完了
+  flags(final);               # ここで処理完了
 };
 
 # ---------------------------------------------------
@@ -383,7 +401,7 @@ log {
   source(s_rfc5424);
   source(s_rfc5424_octet);
   destination(d_openobserve);
-  flags(final); # ここで処理完了とし、以降のlogブロックに進まない
+  flags(final);               # ここで処理完了
 };
 
 #==================================
